--- a/Projekt/docker-compose.yml
+++ b/Projekt/docker-compose.yml
@@ -1,12 +1,40 @@
 version: '3.8'
 services:
   meteo:
-      image: mcr.microsoft.com/devcontainers/java:0-17
-      environment:
-        - WATCHPACK_POLLING=true
-      ports:
-        - "8080:8080"
-      volumes:
+    image: mcr.microsoft.com/devcontainers/java:0-17
+    environment:
+      WATCHPACK_POLLING: "true"
+      MARIADB_ROOT_PASSWORD: "${MARIADB_ROOT_PASSWORD}"
+      MARIADB_DATABASE: "${MARIADB_DATABASE}"
+      MARIADB_USER: "${MARIADB_USER}"
+      MARIADB_PASSWORD: "${MARIADB_PASSWORD}"
+      MARIADB_PORT: "${MARIADB_PORT}"
+      MARIADB_HOST: "${MARIADB_HOST}"
+    ports:
+      - "${METEO_PORT}:8080"
+    volumes:
       - ./meteo:/meteo
-      stdin_open: true
-      tty: true
+    stdin_open: true
+    tty: true
+  mariadb:
+    image: mariadb:10.7.8
+    ports:
+      - "${MARIADB_PORT}:3306"
+    environment:
+      MARIADB_ROOT_PASSWORD: "${MARIADB_ROOT_PASSWORD}"
+      MARIADB_DATABASE: "${MARIADB_DATABASE}"
+      MARIADB_USER: "${MARIADB_USER}"
+      MARIADB_PASSWORD: "${MARIADB_PASSWORD}"
+    volumes:
+      - mariadb_data:/var/lib/mysql
+    restart: always
+  adminer:
+    image: adminer:4.8.1
+    ports:
+      - "${ADMINER_PORT}:8080"
+    environment:
+      ADMINER_DESIGN: "hydra"
+      ADMINER_DEFAULT_SERVER: mariadb
+    restart: always
+volumes:
+  mariadb_data:
