--- a/Projekt/.env
+++ b/Projekt/.env
@@ -1,4 +1,4 @@
-MARIADB_PORT="8086"
+MARIADB_PORT="3306"
 MARIADB_ROOT_PASSWORD="Aa123456"
 MARIADB_DATABASE="meteo"
 MARIADB_USER="dave"
@@ -7,3 +7,5 @@ MARIADB_HOST="mariadb"
 
 ADMINER_PORT="8087"
 METEO_PORT="8080"
+
+OPENWEATHER_API="84637b38fdc2b4e18c35c5a8e52fc5df"
