add import csv & fix export & clean up importexport controller

--- a/Projekt/docker-compose.yml
+++ b/Projekt/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       MARIADB_PORT: "${MARIADB_PORT}"
       MARIADB_HOST: "${MARIADB_HOST}"
       OPENWEATHER_API: "${OPENWEATHER_API}"
+      EXPIRATION_IN_DAYS: "${EXPIRATION_IN_DAYS}"
     ports:
       - "${METEO_PORT}:8080"
     volumes:
