add elastic, kibana, log4j + base util with logging into file [temporary]

--- a/Projekt/.env
+++ b/Projekt/.env
@@ -10,3 +10,7 @@ METEO_PORT="8080"
 
 OPENWEATHER_API="84637b38fdc2b4e18c35c5a8e52fc5df"
 EXPIRATION_IN_DAYS="14"
+
+KIBANA_SYSTEM_PASSWORD="elastic"
+LOGSTASH_INTERNAL_PASSWORD="elastic"
+ELASTIC_PASSWORD="elastic"
