--- a/Projekt/docker-compose.yml
+++ b/Projekt/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       MARIADB_PASSWORD: "${MARIADB_PASSWORD}"
     volumes:
       - mariadb_data:/var/lib/mysql
-    restart: always
+    restart: unless-stopped
   adminer:
     image: adminer:4.8.1
     ports:
@@ -37,6 +37,49 @@ services:
     environment:
       ADMINER_DESIGN: "hydra"
       ADMINER_DEFAULT_SERVER: mariadb
-    restart: always
+    restart: unless-stopped
+  elasticsearch:
+    image: elasticsearch:8.7.0
+    volumes:
+      - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,Z
+      - elasticsearch:/usr/share/elasticsearch/data:Z
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    environment:
+      xpack.security.enabled: false
+      node.name: elasticsearch
+      ES_JAVA_OPTS: -Xms512m -Xmx512m
+      ELASTIC_PASSWORD: "${ELASTIC_PASSWORD}"
+      discovery.type: single-node
+    restart: unless-stopped
+  logstash:
+    image: logstash:8.7.0
+    volumes:
+      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro,Z
+      - ./logstash/pipeline/:/usr/share/logstash/pipeline:ro,Z
+    ports:
+      - 5044:5044
+      - 50000:50000/tcp
+      - 50000:50000/udp
+      - 9600:9600
+    environment:
+      LS_JAVA_OPTS: -Xms256m -Xmx256m
+      LOGSTASH_INTERNAL_PASSWORD: "${LOGSTASH_INTERNAL_PASSWORD}"
+    depends_on:
+      - elasticsearch
+    restart: unless-stopped
+  kibana:
+    image: kibana:8.7.0
+    volumes:
+      - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro,Z
+    ports:
+      - 5601:5601
+    environment:
+      KIBANA_SYSTEM_PASSWORD: "${KIBANA_SYSTEM_PASSWORD}"
+    depends_on:
+      - elasticsearch
+    restart: unless-stopped
 volumes:
   mariadb_data:
+  elasticsearch:
