--- a/Projekt/meteo/src/main/resources/application.properties
+++ b/Projekt/meteo/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=${MARIADB_USER}
 spring.datasource.password=${MARIADB_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+server.error.path=/error
