send logs by websocket

--- a/Projekt/meteo/src/main/resources/log4j.properties
+++ b/Projekt/meteo/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=DEBUG, stdout, file
+log4j.rootLogger=DEBUG, stdout, file, logstash
 log4j.logger.infoLogger=DEBUG, infoLogger
 
 log4j.additivity.infoLogger = false
@@ -24,3 +24,11 @@ log4j.appender.infoLogger.MaxFileSize=5MB
 log4j.appender.infoLogger.MaxBackupIndex=10
 log4j.appender.infoLogger.layout=org.apache.log4j.PatternLayout
 log4j.appender.infoLogger.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+# configuration logstash appender
+log4j.appender.logstash=org.apache.log4j.net.SocketAppender
+log4j.appender.logstash.RemoteHost=logstash
+log4j.appender.logstash.Port=5000
+log4j.appender.logstash.ReconnectionDelay=10000
+log4j.appender.logstash.encoding=UTF-8
+log4j.appender.logstash.layout=org.apache.log4j.PatternLayout
