--- a/Projekt/logstash/pipeline/logstash.conf
+++ b/Projekt/logstash/pipeline/logstash.conf
@@ -1,18 +1,32 @@
 input {
-  file {
-    path => "../../meteo/logs/meteoapp.log"
-    start_position => "beginning"
-  }
+    udp {
+        port => "5000"
+        type => syslog
+        codec => json { charset => "UTF-8" }
+    }
+    tcp {
+        port => "5000"
+        type => syslog
+        codec => json { charset => "UTF-8" }
+    }
+    http {
+        port => "5001"
+        codec => json { charset => "UTF-8" }
+    }
+}
+
+filter {
+    if [type] == "syslog" {
+        mutate {
+            add_field => { "instance_name" => "meteo:8080" }
+        }
+    }
 }
 
 output {
-  stdout {
-    codec => rubydebug
-  }
-  elasticsearch {
-    hosts => "elasticsearch:9200"
-	user => "logstash_internal"
-    index => "meteoapp"
-	password => "${LOGSTASH_INTERNAL_PASSWORD}"
-  }
+    elasticsearch {
+        hosts => ["elasticsearch:9200"]
+        index => "logs-%{+YYYY.MM.dd}"
+        codec => json { charset => "UTF-8" }
+    }
 }
