add cron, base list implementation

--- a/Projekt/.env
+++ b/Projekt/.env
@@ -6,11 +6,10 @@ MARIADB_PASSWORD="Aa123456"
 MARIADB_HOST="mariadb"
 
 ADMINER_PORT="8087"
+
 METEO_PORT="8080"
+METEO_CRON_INTERVAL=3600000
+METEO_CRON_ENABLED=false
 
 OPENWEATHER_API="84637b38fdc2b4e18c35c5a8e52fc5df"
 EXPIRATION_IN_DAYS="14"
-
-KIBANA_SYSTEM_PASSWORD="elastic"
-LOGSTASH_INTERNAL_PASSWORD="elastic"
-ELASTIC_PASSWORD="elastic"
