--- a/Projekt/meteo/src/main/resources/application.properties
+++ b/Projekt/meteo/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=${MARIADB_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 server.error.path=/error
+spring.cron.rate.in.milliseconds=${METEO_CRON_INTERVAL}
+spring.cron.enabled=${METEO_CRON_ENABLED}
