fix favicon error, add logg, add read only mode

--- a/Projekt/meteo/src/main/resources/application.properties
+++ b/Projekt/meteo/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 server.error.path=/error
 spring.cron.rate.in.milliseconds=${METEO_CRON_INTERVAL}
 spring.cron.enabled=${METEO_CRON_ENABLED}
+spring.mode.read-only=${READ_ONLY_MODE}
