--- a/Projekt/docker-compose.yml
+++ b/Projekt/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       EXPIRATION_IN_DAYS: "${EXPIRATION_IN_DAYS}"
       METEO_CRON_ENABLED: ${METEO_CRON_ENABLED}
       METEO_CRON_INTERVAL: "${METEO_CRON_INTERVAL}"
+      READ_ONLY_MODE: "${READ_ONLY_MODE}"
     ports:
       - "${METEO_PORT}:8080"
     volumes:
