add tests and dataset

--- a/Projekt/.env
+++ b/Projekt/.env
@@ -13,4 +13,4 @@ METEO_CRON_ENABLED=false
 
 OPENWEATHER_API="84637b38fdc2b4e18c35c5a8e52fc5df"
 EXPIRATION_IN_DAYS="14"
-READ_ONLY_MODE=true
+READ_ONLY_MODE=false
