--- a/Projekt/docker-compose.yml
+++ b/Projekt/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   meteo:
-    image: mcr.microsoft.com/devcontainers/java:0-17
+    image: davidvancl/meteo-app-image:1.0.0
     environment:
       WATCHPACK_POLLING: "true"
       MARIADB_ROOT_PASSWORD: "${MARIADB_ROOT_PASSWORD}"
@@ -17,11 +17,7 @@ services:
       READ_ONLY_MODE: "${READ_ONLY_MODE}"
     ports:
       - "${METEO_PORT}:8080"
-    volumes:
-      - ./meteo:/meteo
-    stdin_open: true
-    tty: true
-    restart: unless-stopped
+    restart: always
   mariadb:
     image: mariadb:10.7.8
     ports:
@@ -33,14 +29,6 @@ services:
       MARIADB_PASSWORD: "${MARIADB_PASSWORD}"
     volumes:
       - mariadb_data:/var/lib/mysql
-    restart: unless-stopped
-  adminer:
-    image: adminer:4.8.1
-    ports:
-      - "${ADMINER_PORT}:8080"
-    environment:
-      ADMINER_DESIGN: "hydra"
-      ADMINER_DEFAULT_SERVER: mariadb
-    restart: unless-stopped
+    restart: always
 volumes:
   mariadb_data:
